<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logo_layout"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/inha_last_logo"/>

    <LinearLayout
        android:id="@+id/signup_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:text="회원가입"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="28dp"
            android:gravity="center_horizontal"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <EditText
                android:id="@+id/nickname_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nickname"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
            <EditText
                android:inputType="textPassword"
                android:id="@+id/email_edittext_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
            <EditText
                android:inputType="textPassword"
                android:id="@+id/password_edittext_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/signup_btn"
                android:text="@string/signup"
                android:theme="@style/ButtonStyle"
                android:background="@drawable/dark_yellow_btn"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"/>

            <Button
                android:id="@+id/cancle_btn"
                android:text="@string/cancle"
                android:theme="@style/ButtonStyle"
                android:background="@drawable/sign_button"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>